@@ -1,3 +1,5 @@
+- FIX: state of training or challenge was not properly saved when rotating device.
+- DEV: moved to git at https://code.google.com/p/pmtd/
 2012.12.18.20:
 - NEW: challenge mode can now be used and shows a result with score (which can't yet be stored).
 - CHG: specific title for each activity.
